--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -145,15 +145,12 @@
     <Reference Include="CircularProgressBar, Version=2.7.0.7, Culture=neutral, PublicKeyToken=310fd07b25df79b3, processorArchitecture=MSIL">
       <HintPath>..\packages\CircularProgressBar.2.7.0.7\lib\net40\CircularProgressBar.dll</HintPath>
     </Reference>
-    <Reference Include="Devsense.PHP.Phar, Version=1.0.0.0, Culture=neutral, PublicKeyToken=5b4bee2bf1f98593, processorArchitecture=MSIL">
-      <HintPath>..\packages\Devsense.PHP.Phar.1.0.15\lib\net45\Devsense.PHP.Phar.dll</HintPath>
-    </Reference>
     <Reference Include="DropDownControls, Version=1.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\References\DropDownControls.dll</HintPath>
     </Reference>
-    <Reference Include="HtmlAgilityPack, Version=1.11.12.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <HintPath>..\packages\HtmlAgilityPack.1.11.12\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    <Reference Include="HtmlAgilityPack, Version=1.11.16.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.11.16\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.dll</HintPath>
@@ -172,7 +169,7 @@
       <HintPath>..\packages\NBT_Library.1.7.0\lib\net451\NBT.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.3-beta1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3-beta2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NoIP.DDNS.Merged, Version=1.1.0.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -205,8 +202,8 @@
     <Reference Include="WinFormAnimation, Version=1.6.0.4, Culture=neutral, PublicKeyToken=310fd07b25df79b3, processorArchitecture=MSIL">
       <HintPath>..\packages\WinFormAnimation.1.6.0.4\lib\net40\WinFormAnimation.dll</HintPath>
     </Reference>
-    <Reference Include="YamlDotNet, Version=6.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e, processorArchitecture=MSIL">
-      <HintPath>..\packages\YamlDotNet.6.1.2\lib\net45\YamlDotNet.dll</HintPath>
+    <Reference Include="YamlDotNet, Version=8.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e, processorArchitecture=MSIL">
+      <HintPath>..\packages\YamlDotNet.8.0.0\lib\net45\YamlDotNet.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -223,60 +220,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
-    <Compile Include="Classes.rebase\Player.vb" />
-    <Compile Include="Classes.rebase\RunningServerInfo.vb" />
-    <Compile Include="Classes.rebase\Server\ForgeInstaller.vb" />
-    <Compile Include="Classes.rebase\Server\IllegalServerVersionException.vb" />
-    <Compile Include="Classes.rebase\Server\GetServerException.vb" />
-    <Compile Include="Classes.rebase\Server\GetAvailableVersionsException.vb" />
-    <Compile Include="Classes.rebase\Server\InternalSoftwareStartup.vb" />
-    <Compile Include="Classes.rebase\Server\ModpackServerBase.vb" />
-    <Compile Include="Classes.rebase\Server\ProcessMessageHub.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\AkarinServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\BDSServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\CauldronServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\ContigoServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\CustomServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\ForgeServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Interfaces\IBukkit.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Interfaces\IForge.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\KettleServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\NukkitServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\PaperServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\PocketMineServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\SpigotWithGitServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\SpongeVanillaServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\ThermosServer.vb" />
-    <Compile Include="Classes.rebase\Server\ServerAddons.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\SpigotServer.vb" />
-    <Compile Include="Classes.rebase\Server\VersionListLoader.vb" />
     <Compile Include="Classes\Intergrate Solution Server\BungeeCord\BungeeCordHost.vb" />
     <Compile Include="Classes\Intergrate Solution Server\BungeeCord\BungeeCordOptions.vb" />
     <Compile Include="Classes\Intergrate Solution Server\BungeeCord\BungeeCordUpdater.vb" />
-    <Compile Include="Classes\ForgeModUnpatcher.vb" />
     <Compile Include="Classes\Intergrate Solution Server\SubServer\SubServerHost.vb" />
     <Compile Include="Classes\JavaPathsProvider.vb" />
     <Compile Include="Classes\MinecraftLogParser.vb" />
     <Compile Include="Classes\MinecraftUUIDProvider.vb" />
     <Compile Include="Classes\ModPack Server\ModPackServer.vb" />
-    <Compile Include="Classes\PocketMinePluginUnpatcher.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\CraftBukkitServer.vb" />
-    <Compile Include="Classes.rebase\Server\Memoryable.vb" />
-    <Compile Include="Classes.rebase\Server\ServerBase.vb" />
-    <Compile Include="Classes.rebase\Server\ServerDownloadTask.vb" />
-    <Compile Include="Classes.rebase\Server\ServerMaker.vb" />
-    <Compile Include="Classes.rebase\Server\Taskable.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\VanillaServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\AkarinOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\BukkitOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\CauldronOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\AbstractSoftwareOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\NukkitOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\PaperOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\PocketMineOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\ServerProperties.vb" />
-    <Compile Include="Classes\Server\ServerTask.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\SpigotOptions.vb" />
     <Compile Include="Classes\Watchdog.vb" />
     <Compile Include="CryptoProvider.vb" />
     <Compile Include="My Project\Resources.Designer.vb">
@@ -302,12 +253,17 @@
     <Compile Include="Redesigned GUI\Manager.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Redesigned GUI\ServerConsole.Designer.vb">
+      <DependentUpon>ServerConsole.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Redesigned GUI\ServerConsole.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Redesigned GUI\WinAPI.vb" />
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
     <Compile Include="JSONSafeModule.vb" />
-    <Compile Include="Classes\BukkitPluginUnpatcher.vb" />
     <Compile Include="Connections\NoIPProvider.vb" />
     <Compile Include="Connections\UPnPMapper.vb" />
     <Compile Include="GlobalModule.vb" />
@@ -345,6 +301,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Redesigned GUI\Manager.resx">
       <DependentUpon>Manager.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Redesigned GUI\ServerConsole.resx">
+      <DependentUpon>ServerConsole.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -420,8 +379,12 @@
     <None Include="Resources\bukkit.ico" />
     <None Include="Resources\bukkit.png" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Classes.rebase\Server\Modpack Server Softwares\" />
+    <ProjectReference Include="..\ServerManager.Core\ServerManager.Core.vbproj">
+      <Project>{1d6e5da3-066b-4adf-aaff-c97dc09b32c1}</Project>
+      <Name>ServerManager.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
@@ -431,7 +394,7 @@ mkdir Merged\
 echo on
 IF EXIST C:\PROGRA~2\Microsoft\ILMerge\ILMerge.exe (
         echo Starting ILMerge...
-        C:\PROGRA~2\Microsoft\ILMerge\ILMerge.exe /log:  /t:winexe /ndebug  /targetplatform:"v4,c:\windows\Microsoft.NET\Framework\v4.0.30319" /out:Merged\$(TargetFileName) $(TargetFileName) HtmlAgilityPack.dll Newtonsoft.Json.dll NATUPnP.dll YamlDotNet.dll NoIP.DDNS.Merged.dll System.ValueTuple.dll DropDownControls.dll NBT.dll Devsense.PHP.Phar.dll MetroFramework.dll MetroFramework.Design.dll MetroFramework.Fonts.dll CircularProgressBar.dll WinFormAnimation.dll
+        C:\PROGRA~2\Microsoft\ILMerge\ILMerge.exe /log:  /t:winexe /allowDup /ndebug  /targetplatform:"v4,c:\windows\Microsoft.NET\Framework\v4.0.30319" /out:Merged\$(TargetFileName) $(TargetFileName) HtmlAgilityPack.dll Newtonsoft.Json.dll NATUPnP.dll YamlDotNet.dll NoIP.DDNS.Merged.dll System.ValueTuple.dll DropDownControls.dll NBT.dll Devsense.PHP.Phar.dll MetroFramework.dll MetroFramework.Design.dll MetroFramework.Fonts.dll CircularProgressBar.dll WinFormAnimation.dll ServerManager.Core.dll
     ) ELSE (
 echo missing ILMerge , please install MCSMPack.
 )
