DirectX Drawing Test

--- a/ServerManager.Core/ServerManager.Core.vbproj
+++ b/ServerManager.Core/ServerManager.Core.vbproj
@@ -87,54 +87,54 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes.rebase\BukkitPluginUnpatcher.vb" />
-    <Compile Include="Classes.rebase\ForgeModUnpatcher.vb" />
-    <Compile Include="Classes.rebase\MinecraftLogParser.vb" />
-    <Compile Include="Classes.rebase\Player.vb" />
-    <Compile Include="Classes.rebase\PocketMinePluginUnpatcher.vb" />
-    <Compile Include="Classes.rebase\RunningServerInfo.vb" />
-    <Compile Include="Classes.rebase\Server\ForgeInstaller.vb" />
-    <Compile Include="Classes.rebase\Server\GetAvailableVersionsException.vb" />
-    <Compile Include="Classes.rebase\Server\GetServerException.vb" />
-    <Compile Include="Classes.rebase\Server\IllegalServerVersionException.vb" />
-    <Compile Include="Classes.rebase\Server\InternalSoftwareStartup.vb" />
-    <Compile Include="Classes.rebase\Server\Memoryable.vb" />
-    <Compile Include="Classes.rebase\Server\ModpackServerBase.vb" />
-    <Compile Include="Classes.rebase\Server\ProcessMessageHub.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\AkarinServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\BDSServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\CauldronServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\ContigoServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\CraftBukkitServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\CustomServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\ForgeServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Interfaces\IBukkit.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Interfaces\IForge.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\KettleServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\NukkitServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\AbstractSoftwareOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\AkarinOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\BukkitOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\CauldronOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\NukkitOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\PaperOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\PocketMineOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\ServerProperties.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\Options And Properties\SpigotOptions.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\PaperServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\PocketMineServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\SpigotServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\SpigotWithGitServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\SpongeVanillaServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\ThermosServer.vb" />
-    <Compile Include="Classes.rebase\Server\Server Softwares\VanillaServer.vb" />
-    <Compile Include="Classes.rebase\Server\ServerAddons.vb" />
-    <Compile Include="Classes.rebase\Server\ServerBase.vb" />
-    <Compile Include="Classes.rebase\Server\ServerDownloadTask.vb" />
-    <Compile Include="Classes.rebase\Server\ServerMaker.vb" />
-    <Compile Include="Classes.rebase\Server\Taskable.vb" />
-    <Compile Include="Classes.rebase\Server\VersionListLoader.vb" />
-    <Compile Include="Classes.rebase\Watchdog.vb" />
+    <Compile Include="Classes\BukkitPluginUnpatcher.vb" />
+    <Compile Include="Classes\ForgeModUnpatcher.vb" />
+    <Compile Include="Classes\MinecraftLogParser.vb" />
+    <Compile Include="Classes\Player.vb" />
+    <Compile Include="Classes\PocketMinePluginUnpatcher.vb" />
+    <Compile Include="Classes\RunningServerInfo.vb" />
+    <Compile Include="Classes\Server\ForgeInstaller.vb" />
+    <Compile Include="Classes\Server\GetAvailableVersionsException.vb" />
+    <Compile Include="Classes\Server\GetServerException.vb" />
+    <Compile Include="Classes\Server\IllegalServerVersionException.vb" />
+    <Compile Include="Classes\Server\InternalSoftwareStartup.vb" />
+    <Compile Include="Classes\Server\Memoryable.vb" />
+    <Compile Include="Classes\Server\ModpackServerBase.vb" />
+    <Compile Include="Classes\Server\ProcessMessageHub.vb" />
+    <Compile Include="Classes\Server\Server Softwares\AkarinServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\BDSServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\CauldronServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\ContigoServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\CraftBukkitServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\CustomServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\ForgeServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\Interfaces\IBukkit.vb" />
+    <Compile Include="Classes\Server\Server Softwares\Interfaces\IForge.vb" />
+    <Compile Include="Classes\Server\Server Softwares\KettleServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\NukkitServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\Options And Properties\AbstractSoftwareOptions.vb" />
+    <Compile Include="Classes\Server\Server Softwares\Options And Properties\AkarinOptions.vb" />
+    <Compile Include="Classes\Server\Server Softwares\Options And Properties\BukkitOptions.vb" />
+    <Compile Include="Classes\Server\Server Softwares\Options And Properties\CauldronOptions.vb" />
+    <Compile Include="Classes\Server\Server Softwares\Options And Properties\NukkitOptions.vb" />
+    <Compile Include="Classes\Server\Server Softwares\Options And Properties\PaperOptions.vb" />
+    <Compile Include="Classes\Server\Server Softwares\Options And Properties\PocketMineOptions.vb" />
+    <Compile Include="Classes\Server\Server Softwares\Options And Properties\ServerProperties.vb" />
+    <Compile Include="Classes\Server\Server Softwares\Options And Properties\SpigotOptions.vb" />
+    <Compile Include="Classes\Server\Server Softwares\PaperServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\PocketMineServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\SpigotServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\SpigotWithGitServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\SpongeVanillaServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\ThermosServer.vb" />
+    <Compile Include="Classes\Server\Server Softwares\VanillaServer.vb" />
+    <Compile Include="Classes\Server\ServerAddons.vb" />
+    <Compile Include="Classes\Server\ServerBase.vb" />
+    <Compile Include="Classes\Server\ServerDownloadTask.vb" />
+    <Compile Include="Classes\Server\ServerMaker.vb" />
+    <Compile Include="Classes\Server\Taskable.vb" />
+    <Compile Include="Classes\Server\VersionListLoader.vb" />
+    <Compile Include="Classes\Watchdog.vb" />
     <Compile Include="GlobalModule.vb" />
     <Compile Include="JSONSafeModule.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -152,7 +152,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Server\ServerTask.vb" />
+    <Compile Include="Classes\ServerTask.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
