--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -175,6 +175,21 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\References\NoIP.DDNS.Merged.dll</HintPath>
     </Reference>
+    <Reference Include="SharpDX, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpDX.4.2.0\lib\net45\SharpDX.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpDX.Desktop, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpDX.Desktop.4.2.0\lib\net45\SharpDX.Desktop.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpDX.Direct2D1, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpDX.Direct2D1.4.2.0\lib\net45\SharpDX.Direct2D1.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpDX.Direct3D11, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpDX.Direct3D11.4.2.0\lib\net45\SharpDX.Direct3D11.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpDX.DXGI, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpDX.DXGI.4.2.0\lib\net45\SharpDX.DXGI.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.dll</HintPath>
     </Reference>
@@ -230,6 +245,12 @@
     <Compile Include="Classes\ModPack Server\ModPackServer.vb" />
     <Compile Include="Classes\Watchdog.vb" />
     <Compile Include="CryptoProvider.vb" />
+    <Compile Include="Form1.Designer.vb">
+      <DependentUpon>Form1.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form1.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -246,6 +267,12 @@
     </Compile>
     <Compile Include="Redesigned GUI\CreateServerDialog.vb">
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Redesigned GUI\DXListView.Designer.vb">
+      <DependentUpon>DXListView.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Redesigned GUI\DXListView.vb">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Redesigned GUI\Manager.Designer.vb">
       <DependentUpon>Manager.vb</DependentUpon>
@@ -287,6 +314,9 @@
     <None Include="ServerManager_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
@@ -298,6 +328,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Redesigned GUI\CreateServerDialog.resx">
       <DependentUpon>CreateServerDialog.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Redesigned GUI\DXListView.resx">
+      <DependentUpon>DXListView.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Redesigned GUI\Manager.resx">
       <DependentUpon>Manager.vb</DependentUpon>
