--- a/ServerManager/packages.config
+++ b/ServerManager/packages.config
@@ -7,6 +7,11 @@
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net452" developmentDependency="true" />
   <package id="NBT_Library" version="1.7.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3-beta2" targetFramework="net452" />
+  <package id="SharpDX" version="4.2.0" targetFramework="net452" />
+  <package id="SharpDX.Desktop" version="4.2.0" targetFramework="net452" />
+  <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net452" />
+  <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net452" />
+  <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
   <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net452" />
   <package id="YamlDotNet" version="8.0.0" targetFramework="net452" />
