--- a/ServerManager/packages.config
+++ b/ServerManager/packages.config
@@ -3,7 +3,7 @@
   <package id="CircularProgressBar" version="2.7.0.7" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.11.16" targetFramework="net452" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net452" />
-  <package id="Microsoft.Build.Tasks.Git" version="1.0.0-beta-63102-01" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Build.Tasks.Git" version="1.0.0-beta-63102-01" targetFramework="net452" developmentDependency="true" requireReinstallation="true" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net452" developmentDependency="true" />
   <package id="NBT_Library" version="1.7.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3-beta2" targetFramework="net452" />
@@ -12,7 +12,7 @@
   <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net452" />
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net452" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" requireReinstallation="true" />
   <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net452" />
   <package id="YamlDotNet" version="8.0.0" targetFramework="net452" />
 </packages>
