--- a/ServerManager.Core/ServerManager.Core.vbproj
+++ b/ServerManager.Core/ServerManager.Core.vbproj
@@ -1,178 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1D6E5DA3-066B-4ADF-AAFF-C97DC09B32C1}</ProjectGuid>
-    <OutputType>Library</OutputType>
     <RootNamespace>ServerManager</RootNamespace>
-    <AssemblyName>ServerManager.Core</AssemblyName>
-    <FileAlignment>512</FileAlignment>
-    <MyType>Windows</MyType>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
+    <TargetFrameworks>netcoreapp2.1;net461</TargetFrameworks>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <DefineDebug>true</DefineDebug>
-    <DefineTrace>true</DefineTrace>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>ServerManager.Core.xml</DocumentationFile>
-    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <DefineDebug>false</DefineDebug>
-    <DefineTrace>true</DefineTrace>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>ServerManager.Core.xml</DocumentationFile>
-    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
-  </PropertyGroup>
-  <PropertyGroup>
-    <OptionExplicit>On</OptionExplicit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <OptionCompare>Binary</OptionCompare>
-  </PropertyGroup>
-  <PropertyGroup>
-    <OptionStrict>Off</OptionStrict>
-  </PropertyGroup>
-  <PropertyGroup>
-    <OptionInfer>On</OptionInfer>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Devsense.PHP.Phar, Version=1.0.0.0, Culture=neutral, PublicKeyToken=5b4bee2bf1f98593, processorArchitecture=MSIL">
-      <HintPath>..\packages\Devsense.PHP.Phar.1.0.15\lib\net45\Devsense.PHP.Phar.dll</HintPath>
-    </Reference>
-    <Reference Include="HtmlAgilityPack, Version=1.11.16.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <HintPath>..\packages\HtmlAgilityPack.1.11.16\lib\Net45\HtmlAgilityPack.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.3-beta2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Design" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Drawing.Design" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.IO.Compression.FileSystem" />
-    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="YamlDotNet, Version=8.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e, processorArchitecture=MSIL">
-      <HintPath>..\packages\YamlDotNet.8.0.0\lib\net45\YamlDotNet.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Devsense.PHP.Phar" Version="1.0.15" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.16" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta2" />
+    <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
+    <PackageReference Include="System.IO.Compression" Version="4.3.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+    <PackageReference Include="YamlDotNet" Version="8.0.0" />
   </ItemGroup>
-  <ItemGroup>
-    <Import Include="Microsoft.VisualBasic" />
-    <Import Include="System" />
-    <Import Include="System.Collections" />
-    <Import Include="System.Collections.Generic" />
-    <Import Include="System.Data" />
-    <Import Include="System.Diagnostics" />
-    <Import Include="System.Drawing" />
-    <Import Include="System.Linq" />
-    <Import Include="System.Xml.Linq" />
-    <Import Include="System.Threading.Tasks" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Classes\BukkitPluginUnpatcher.vb" />
-    <Compile Include="Classes\ForgeModUnpatcher.vb" />
-    <Compile Include="Classes\MinecraftLogParser.vb" />
-    <Compile Include="Classes\Player.vb" />
-    <Compile Include="Classes\PocketMinePluginUnpatcher.vb" />
-    <Compile Include="Classes\RunningServerInfo.vb" />
-    <Compile Include="Classes\Server\ForgeInstaller.vb" />
-    <Compile Include="Classes\Server\GetAvailableVersionsException.vb" />
-    <Compile Include="Classes\Server\GetServerException.vb" />
-    <Compile Include="Classes\Server\IllegalServerVersionException.vb" />
-    <Compile Include="Classes\Server\InternalSoftwareStartup.vb" />
-    <Compile Include="Classes\Server\Memoryable.vb" />
-    <Compile Include="Classes\Server\ModpackServerBase.vb" />
-    <Compile Include="Classes\Server\ProcessMessageHub.vb" />
-    <Compile Include="Classes\Server\Server Softwares\AkarinServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\BDSServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\CauldronServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\ContigoServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\CraftBukkitServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\CustomServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\ForgeServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\Interfaces\IBukkit.vb" />
-    <Compile Include="Classes\Server\Server Softwares\Interfaces\IForge.vb" />
-    <Compile Include="Classes\Server\Server Softwares\KettleServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\NukkitServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\Options And Properties\AbstractSoftwareOptions.vb" />
-    <Compile Include="Classes\Server\Server Softwares\Options And Properties\AkarinOptions.vb" />
-    <Compile Include="Classes\Server\Server Softwares\Options And Properties\BukkitOptions.vb" />
-    <Compile Include="Classes\Server\Server Softwares\Options And Properties\CauldronOptions.vb" />
-    <Compile Include="Classes\Server\Server Softwares\Options And Properties\NukkitOptions.vb" />
-    <Compile Include="Classes\Server\Server Softwares\Options And Properties\PaperOptions.vb" />
-    <Compile Include="Classes\Server\Server Softwares\Options And Properties\PocketMineOptions.vb" />
-    <Compile Include="Classes\Server\Server Softwares\Options And Properties\ServerProperties.vb" />
-    <Compile Include="Classes\Server\Server Softwares\Options And Properties\SpigotOptions.vb" />
-    <Compile Include="Classes\Server\Server Softwares\PaperServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\PocketMineServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\SpigotServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\SpigotWithGitServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\SpongeVanillaServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\ThermosServer.vb" />
-    <Compile Include="Classes\Server\Server Softwares\VanillaServer.vb" />
-    <Compile Include="Classes\Server\ServerAddons.vb" />
-    <Compile Include="Classes\Server\ServerBase.vb" />
-    <Compile Include="Classes\Server\ServerDownloadTask.vb" />
-    <Compile Include="Classes\Server\ServerMaker.vb" />
-    <Compile Include="Classes\Server\Taskable.vb" />
-    <Compile Include="Classes\Server\VersionListLoader.vb" />
-    <Compile Include="Classes\Watchdog.vb" />
-    <Compile Include="GlobalModule.vb" />
-    <Compile Include="JSONSafeModule.vb" />
-    <Compile Include="My Project\AssemblyInfo.vb" />
-    <Compile Include="My Project\Application.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Application.myapp</DependentUpon>
-    </Compile>
-    <Compile Include="My Project\Resources.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="My Project\Settings.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <Compile Include="Classes\ServerTask.vb" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="My Project\Resources.resx">
-      <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
-      <CustomToolNamespace>My.Resources</CustomToolNamespace>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="My Project\Application.myapp">
-      <Generator>MyApplicationCodeGenerator</Generator>
-      <LastGenOutput>Application.Designer.vb</LastGenOutput>
-    </None>
-    <None Include="My Project\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <CustomToolNamespace>My</CustomToolNamespace>
-      <LastGenOutput>Settings.Designer.vb</LastGenOutput>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
+
 </Project>
