--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,4 @@ MigrationBackup/
 /ServerManager/Release_WinTest
 /ServerManager/ReleaseUniversal
 /ServerManager/ReleaseWindows
+/ServerManager/EdgeWindows
