--- a/ServerManager.Core/ServerManager.Core.vbproj
+++ b/ServerManager.Core/ServerManager.Core.vbproj
@@ -3,6 +3,14 @@
   <PropertyGroup>
     <RootNamespace>ServerManager</RootNamespace>
     <TargetFrameworks>netcoreapp2.1;net461</TargetFrameworks>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <OptionCompare>Text</OptionCompare>
+    <Version>1.7.0.0</Version>
+    <Authors>Error 404,冰霜,asd7766zxc</Authors>
+    <Product>Minecraft 伺服器管理員</Product>
+    <Copyright>Copyright © Minecraft 伺服器管理員 2019</Copyright>
+    <Description>管理 Minecraft 伺服器</Description>
+    <OptionExplicit>Off</OptionExplicit>
   </PropertyGroup>
 
   <ItemGroup>
