--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -287,7 +287,6 @@
     <Compile Include="Classes\Intergrate Solution Server\BungeeCord\BungeeCordOptions.vb" />
     <Compile Include="Classes\Intergrate Solution Server\BungeeCord\BungeeCordUpdater.vb" />
     <Compile Include="Classes\ForgeModUnpatcher.vb" />
-    <Compile Include="Classes\Intergrate Solution Server\SubServer\SubServerHost.vb" />
     <Compile Include="Classes\JavaPathsProvider.vb" />
     <Compile Include="Classes\MinecraftLogParser.vb" />
     <Compile Include="Classes\MinecraftUUIDProvider.vb" />
@@ -731,9 +730,7 @@
     <None Include="Resources\bukkit.ico" />
     <None Include="Resources\bukkit.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="GUI\Intergrate Solution Server\SubServer\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
     <PostBuildEvent>echo Making Merged Folder in $(OutDir)Merged\
