--- a/ServerManager/packages.config
+++ b/ServerManager/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Devsense.PHP.Phar" version="1.0.15" targetFramework="net452" />
-  <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net452" />
+  <package id="HtmlAgilityPack" version="1.11.17" targetFramework="net461" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net452" />
   <package id="Microsoft.Build.Tasks.Git" version="1.0.0-beta-63102-01" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net452" developmentDependency="true" />
   <package id="NBT_Library" version="1.7.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="12.0.3-beta1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="SharpDX" version="4.2.0" targetFramework="net452" />
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net452" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net452" />
