--- a/.gitignore
+++ b/.gitignore
@@ -348,7 +348,7 @@ healthchecksdb
 MigrationBackup/
 
 # End of https://www.gitignore.io/api/visualstudio
-/ServerManager/Release_WinTest
-/ServerManager/ReleaseUniversal
-/ServerManager/ReleaseWindows
-/ServerManager/Linux Mono DLL
+**/Release**
+**/Edge**
+**/Linux Mono DLL
+ServerManagerFTPHost/bin/*.*
